# vuci

./: .gitignore  API.md  CONTRIBUTING.md  README.md  README_ZH.md  vuci-app.mk
applications/vuci-app-access/: Makefile
applications/vuci-app-acl/: Makefile
applications/vuci-app-active-routes/: Makefile
applications/vuci-app-admin/: Makefile
applications/vuci-app-cli/: Makefile
applications/vuci-app-cron/: Makefile
applications/vuci-app-dhcp/: Makefile
applications/vuci-app-diagnostics/: Makefile
applications/vuci-app-dmesg/: Makefile
applications/vuci-app-example/: Makefile
applications/vuci-app-firewall/: Makefile
applications/vuci-app-home/: Makefile
applications/vuci-app-hosts/: Makefile
applications/vuci-app-interfaces/: Makefile
applications/vuci-app-leds/: Makefile
applications/vuci-app-login/: Makefile
applications/vuci-app-ntp/: Makefile
applications/vuci-app-ntp-general/: Makefile
applications/vuci-app-openvpn/: Makefile
applications/vuci-app-processes/: Makefile
applications/vuci-app-routes/: Makefile
applications/vuci-app-rtty/: Makefile
applications/vuci-app-ssh/: Makefile
applications/vuci-app-syslog/: Makefile
applications/vuci-app-system/: Makefile
applications/vuci-app-upgrade/: Makefile
build-app/: README.md  package-lock.json
docs/: README.md  deploy.sh
tools/: api.sh
vuci-bwm/: Makefile
vuci-httpd/: Makefile
vuci-httpd/src/: CMakeLists.txt  main.c  rpc.c
vuci-httpd/src/lua/: CMakeLists.txt  lfs.c  ljson.c  lnetwork.c  lsystem.c  lutils.c  rpc.lua  utils.lua
vuci-ui-core/: Makefile
(+153 files in other folders)
